# Eye-Contact-Detection-With-OpenFace

./: .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  OpenFace.sln  README.md  Readme.txt  appveyor.yml  download_models.ps1  download_models.sh  install.sh
OpenFaceDemo/: MainWindow.xaml  MainWindow.xaml.cs  OpenFaceDemo.csproj
OpenFaceDemo/UI_items/: CameraSelection.xaml.cs
cmake/modules/: FindBLAS.cmake  FindOpenBLAS.cmake  FindTBB.cmake
exe/FaceLandmarkImg/: CMakeLists.txt  FaceLandmarkImg.cpp  FaceLandmarkImg.vcxproj
exe/FaceLandmarkVid/: CMakeLists.txt  FaceLandmarkVid.cpp  FaceLandmarkVid.vcxproj
exe/FaceLandmarkVidMulti/: CMakeLists.txt  FaceLandmarkVidMulti.cpp  FaceLandmarkVidMulti.vcxproj
exe/FeatureExtraction/: CMakeLists.txt  FeatureExtraction.cpp  FeatureExtraction.vcxproj
exe/Recording/: Recording.vcxproj
exe/releases/: download_models.ps1  package_windows_executables.m
eye_contact_files/: FaceLandmarkVid.cpp  README.md
eye_contact_files/bin_replacement/: predictorClient.py
eye_contact_files/python/: gaussianTrain.py  readme.txt
eye_contact_files/python_appendix/: baseline-classification.py  infant-eye-gaze.ipynb  processor.py  readme.md  stacker.py
eye_contact_files/ready2run_mac_binary/: DetectEyeContact  README.md  dt.joblib  output.csv  predictorClient.py  predictorServer.py
gui/HeadPose-live/: HeadPoseLive.csproj  Liability.xaml.cs  MainWindow.xaml.cs  TextEntryWindow.xaml.cs
gui/OpenFace-offline/: App.xaml.cs  FpsTracker.cs  MainWindow.xaml  MainWindow.xaml.cs  OpenFaceOffline.csproj
gui/OpenFaceDemo/: MainWindow.xaml  MainWindow.xaml.cs  OpenFaceDemo.csproj
gui/OpenFaceOffline/: FpsTracker.cs  MainWindow.xaml  MainWindow.xaml.cs  OpenFaceOffline.csproj  Recorder.cs  confirm_gui_output.m
lib/local/GazeAnalyser/: CMakeLists.txt  GazeAnalyser.vcxproj
lib/local/GazeAnalyser/include/: GazeEstimation.h
lib/local/GazeAnalyser/src/: GazeEstimation.cpp
lib/local/LandmarkDetector/: CMakeLists.txt  LandmarkDetector.vcxproj  LandmarkDetector.vcxproj.filters
lib/local/LandmarkDetector/include/: CCNF_patch_expert.h  CEN_patch_expert.h  CNN_utils.h  DPN_patch_expert.h  FaceDetectorMTCNN.h  LandmarkDetectionValidator.h  LandmarkDetectorFunc.h  LandmarkDetectorModel.h  LandmarkDetectorParameters.h  LandmarkDetectorUtils.h  PAW.h  PDM.h  Patch_experts.h  PathConfig.h.in  stdafx.h
lib/local/LandmarkDetector/model/: cen_general.txt  dpn_general.txt  early_term_cen.txt  early_term_cen_of.txt  main_ceclm_general.txt  main_clm_general.txt  main_clm_wild.txt  main_clnf_demos.txt  main_clnf_general.txt  main_clnf_multi_pie.txt  main_clnf_wild.txt  main_dclm_general.txt
lib/local/LandmarkDetector/model/detection_validation/: validator_cnn_68.txt
lib/local/LandmarkDetector/src/: CCNF_patch_expert.cpp  CEN_patch_expert.cpp  CNN_utils.cpp  DPN_patch_expert.cpp  FaceDetectorMTCNN.cpp  LandmarkDetectionValidator.cpp  LandmarkDetectorFunc.cpp  LandmarkDetectorModel.cpp  LandmarkDetectorParameters.cpp  LandmarkDetectorUtils.cpp  PAW.cpp  PDM.cpp  Patch_experts.cpp  SVR_patch_expert.cpp
lib/local/Utilities/: CMakeLists.txt  Utilities.vcxproj  Utilities.vcxproj.filters
lib/local/Utilities/include/: ImageCapture.h  ImageManipulationHelpers.h  RecorderCSV.h  RecorderHOG.h  RecorderOpenFace.h  RecorderOpenFaceParameters.h  RotationHelpers.h  SequenceCapture.h  VisualizationUtils.h  Visualizer.h
lib/local/Utilities/src/: ImageCapture.cpp  RecorderCSV.cpp  RecorderHOG.cpp  RecorderOpenFace.cpp  RecorderOpenFaceParameters.cpp  SequenceCapture.cpp  VisualizationUtils.cpp  Visualizer.cpp
matlab_runners/: Full_test_suite.m  Readme.txt
matlab_runners/Action Unit Experiments/: run_AU_prediction_BP4D.m  run_AU_prediction_Bosphorus.m  run_AU_prediction_DISFA.m  run_AU_prediction_FERA2011.m  run_AU_prediction_SEMAINE.m  run_AU_prediction_UNBC.m
matlab_runners/Demos/: Read_HOG_file.m  feature_extraction_demo_img_seq.m  feature_extraction_demo_vid.m  gaze_extraction_demo_vid.m  run_demo_align_size.m  run_demo_images.m  run_demo_video_multi.m  run_demo_videos.m
matlab_runners/Feature Point Experiments/: Compute_300VW_errors.m  Construct_error_table_300VW.m  Display_300VW_results_49.m  Run_OF_on_images.m  run_300VW_dataset.m  run_300VW_dataset_DCLM.m  run_300VW_dataset_OpenFace.m  run_300VW_dataset_cats.m  run_OpenFace_feature_point_tests_300W.m  run_OpenFace_feature_point_tests_300W_ceclm.m  run_clm_feature_point_tests_wild.m  run_yt_dataset.m
matlab_runners/Gaze Experiments/: extract_mpii_gaze_test.m  mpii_1500_errs.mat  mpii_1500_errs.txt
matlab_runners/Head Pose Experiments/: calcBUerror.m  calcBiwiError.m  calcIctError.m  run_biwi_experiment.m  run_bu_experiment.m  run_head_pose_tests_OpenFace.m  run_head_pose_tests_OpenFace_CECLM.m  run_head_pose_tests_OpenFace_CLNF.m  run_head_pose_tests_OpenFace_DCLM.m  run_ict_experiment.m
matlab_version/: readme.txt
matlab_version/AU_training/: instructions.txt
matlab_version/bounding_box_mapping/: readme.txt
matlab_version/demo/: face_image_demo.m  face_image_demo_eyes.m  face_video_demo.m
matlab_version/experiments_300VW/: CECLM_300VW_general.m  CECLM_300VW_general_bad.m  CECLM_300VW_general_exp.m  CECLM_300VW_menpo.m  CLM_300VW.m  CLNF_300VW.m  CLNF_300VW_general.m  Construct_error_table.m  DCLM_300VW.m  Display_300VW_results.m  Display_300VW_results_49.m  Display_300VW_results_66.m  Display_300VW_results_cats.m  Display_300VW_results_cats_68.m  Generate_baseline_results.m  Generate_ceclm_results.m  Script_CECLM_300VW_general.m  Script_CECLM_300VW_menpo.m  Script_CLM_300VW.m  Script_CLNF_300VW_general.m  readme.txt
matlab_version/experiments_300W/: Display_ceclm_results_68.m  Extract_table_results_49.m  Extract_table_results_68.m  Script_CECLM_general.m  Script_CECLM_menpo.m  Script_CLM.m  Script_CLNF.m  Script_CLNF_general.m  Script_CLNF_wild.m
matlab_version/experiments_JANUS/: Display_ceclm_results_49.m  Display_ceclm_results_68.m  Display_dclm_results.m  Display_janus_results_cvpr2017.m  Script_CECLM_general.m  (+12 more)
model_training/: readme.txt
samples/: licenses.txt
(+588 files in other folders)
